Seperated the button functionality by their topics, now when you click a button, you will get the topic that button represents as a gif!

--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
 </head>
 
 <body class="animated fadeIn">
-        <a style="position: fixed;" href="https://github.com/IAmShawn98"><img width="189" height="189" src="assets/images/gitRibbon.png"></a>
+    <a style="position: fixed;" href="https://github.com/IAmShawn98"><img width="189" height="189" src="assets/images/gitRibbon.png"></a>
     <!-- App Container -->
     <div class="container text-center">
         <!-- App Head -->
         <div class="jumbotron-fluid bg-info">
-            <h1 class="text-white">Shawn's Innermost Thoughts</h1>
+            <h1 class="text-white">My Innermost Thoughts</h1>
             <p class="text-white">
                 Welcome to the very depths of my consciousness. Here, you can interact with my brain by stimulating one
                 of the buttons below.
             </p>
+            <!-- Populate Buttons -->
             <div id="btnDisplay"></div>
         </div>
         <!-- App Main Content Population -->
         <main class="card mt-4">
             <!-- This is where my innermost thoughts are populated -->
             <div class="card-header text-primary font-weight-bold lead">
-                <i class="fas fa-brain text-pink"></i> Shawn's Brain
+                <i class="fas fa-brain text-pink"></i> My Subconscious
             </div>
             <!-- Gif Population Here -->
             <div class="card-body">
