Performed an HTML & JavaScript code cleanup, explained new pieces of code through JS & HTML comments, re-worded some comments to better fix the functionality of the code.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 </head>
 
 <body class="animated fadeIn">
-    <a style="position: fixed;" href="https://github.com/IAmShawn98"><img width="189" height="189" src="assets/images/gitRibbon.png"></a>
+    <!-- A Thing By Shawn 2019 -->
+    <a style="position: fixed;" href="https://github.com/IAmShawn98">
+        <img width="189" height="189" src="assets/images/gitRibbon.png">
+    </a>
     <!-- App Container -->
     <div class="container text-center">
         <!-- App Head -->
@@ -39,7 +42,7 @@
         </div>
         <!-- App Main Content Population -->
         <main class="card mt-4">
-            <!-- This is where my innermost thoughts are populated -->
+            <!-- Content Box - 'My Subconscious' Title -->
             <div class="card-header text-primary font-weight-bold lead">
                 <i class="fas fa-brain text-pink"></i> My Subconscious
             </div>
