Added a button so users can create their own thoughts (Just a placeholder for now, the buttons that get created when the user submits them are not yet able to return gifs.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,20 @@
             </div>
             <!-- Gif Population Here -->
             <div class="card-body">
-                <div id="thoughtPopulation"></div>
+                <div id="thoughtPopulation">
+                    <label class="text-muted" id="prePopulationMessage">Click A Button, Watch the Magic!</label>
+                </div>
+                <!-- User Defined Gif Input -->
+                <div class="form-group mt-3">
+                    <hr>
+                    <!-- Input Label -->
+                    <label for="userDefinedGifs"><b class="text-info">What's On Your Mind? <br> Let's Merge!</b></label>
+                    <!-- Input Box -->
+                    <input style="width: 45%; margin: auto;" type="text" class="form-control" id="userDefinedGifs"
+                        placeholder="What Interests You? Create A Thought Button!">
+                    <!-- Add Thought Button -->
+                    <button id="btnNewThought" class="btn btn-info mt-4">Add New Thought!</button>
+                </div>
             </div>
         </main>
     </div>
