Added animations to certain events such as creating user defined buttons, loading up the page, and a little 'tada' for my watermark ribbon!

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body class="animated fadeIn">
     <!-- A Thing By Shawn 2019 -->
-    <a style="position: fixed;" href="https://github.com/IAmShawn98">
+    <a class="animated tada" style="position: fixed;" href="https://github.com/IAmShawn98">
         <img width="189" height="189" src="assets/images/gitRibbon.png">
     </a>
     <!-- App Container -->
